[gd_scene load_steps=2 format=3 uid="uid://32wxee4cd0fm"]

[ext_resource type="Script" path="res://pause_menu/pause_menu.gd" id="1_36ub8"]

[node name="PauseMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36ub8")
title_path = "res://title_menu/title_menu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UnpauseButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Unpause"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Title"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/UnpauseButton" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
